--- a/changelog.html
+++ b/changelog.html
@@ -3,7 +3,11 @@
 <html lang="en">
 	
 	<head>
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 		<title>Changelog - Relocation</title>
+		
 	</head>
 	
 	<body>
