--- a/changelog.html
+++ b/changelog.html
@@ -14,15 +14,15 @@
 	
 	<body>
 		
-		<main>
+		<div>
 			
-			<h1>Changelog</h1>
+			<h2>Changelog</h2>
 			
-			<h2>[Update] Alpha v0.6.5.7 - Tools Update</h2>
+			<p>[Update] Alpha v0.6.5.7<br />Tools Update</p>
 			<br />
-			<h2>[Update] Alpha v0.6.4 - Cave Update</h2>
+			<p>[Update] Alpha v0.6.4<br />Cave Update</p>
 			
-		</main>
+		</div>
 		
 	</body>
 	
