--- a/changelog.html
+++ b/changelog.html
@@ -18,6 +18,8 @@
 			
 			<h2>Changelog</h2>
 			
+			<p>[Update] Alpha 0.8.2.8<br />Better Console Update</p>
+			<br />
 			<p>[Update] Alpha 0.7.6.1<br />Bug Fixes/Minor Improvements</p>
 			<br />
 			<p>[Update] Alpha v0.6.5.7<br />Tools Update</p>
