--- a/changelog.html
+++ b/changelog.html
@@ -12,12 +12,14 @@
 		
 	</head>
 	
-	<body>
+	<body oncontextmenu="return false;">
 		
 		<div>
 			
 			<h2>Changelog</h2>
 			
+			<p>[Update] Release 1.0.0.0<br />Saving/Loading Worlds</p>
+			<br />
 			<p>[Update] Beta 1.0.2.2<br />Bug Fixes/Improvements</p>
 			<br />
 			<p>[Update] Beta 0.8.6.9<br />Time Update</p>
