--- a/changelog.html
+++ b/changelog.html
@@ -12,7 +12,7 @@
 		
 	</head>
 	
-	<body oncontextmenu="return false;">
+	<body oncontextmenu="return false;" onselectstart="return false;" ondragstart="return false;">
 		
 		<div>
 			
